Pre-launch v 1.0 -> Fixed styling, fixed shortcut ctrl+shift+w

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Sixtyfour&display=swap');
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -5,53 +7,40 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
 em-emoji-picker {
-  --border-radius: 0!important;
+  --border-radius: 0 !important;
 }
 
 .header {
   display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1ch;
+  align-items: center;
+  justify-content: center;
+  gap: 3ch;
+  cursor: default;
 }
+
+.header h2 {
+  font-family: 'Sixtyfour', sans-serif;
+  font-size: 0.85rem;
+  margin: 0;
+  /* Remove default margin */
+}
+
 .header img {
   width: 27px;
   height: 27px;
+}
+
+.version {
+  font-size: 0.7rem;
+  /* Adjust font size for version text */
+}
+
+.text-holder-area {
+  display: flex;
+  line-height: 0.3em;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  margin-top: 1.15rem;
 }
